0.16
======

- fixed bug that skipped previous date when calculating MA's 

- created 2 custom widgets SettingView and Navigator for dialogs

- added a compile option to increase speed "-O3"

- fixed "export" all bug when trying to export all charts

- added new MA support for WilderMA and fixed TR function to include first bar thanks to Glen for the patch

0.15
======

- Comprehensive documentation now included in the docs directory. Moved all the docs there.
  Whew! I'd rather stare at the wall than write docmentation. It's finally done.
  
- Ported code to Qt3. There is no backwards compatability with =< Qt2.3

- Simplified the plugin interface with a new design. Much simpler now. Plugin is now the base
  class for all plugins. Had to change all the plugins to accomodate the changes.

- Removed chart plugins and merged them back into Plot code, this was not so
  good an idea. Oh well.

- Added new Quote plugins:
    NYBOT - Used to import NYBOT exchange futures data from an ASCII file.
    Qtstalker - Used to import ASCII files that have been exported using qtstalker's export function.
    COT - Download commitment of traders reports for all major futures.
    CMEHistory - Downloads CME history for the current year only.
    Index - Used for creating and updating custom index composites
    Spread - Used for creating and updating custom spread composites

- Removed Variable plugin

- Combined the STOCHF and STOCHS plugin indicators into new STOCH plugin

- Combined the SMA, EMA, WMA plugin indicators into MA plugin

- Added colors to Candle charts

- New indicators:
    MA2 - 2 plot MA
    MA3 - 3 plot MA
    DPO - Detrended Price Oscillator
    VOLR - Volatility Ratio

- added a cancel download function to quotes

- added an install script that installs plugins and files for you instead of doing it manually.

- added colors to text labels on plots.

- added more detail to the date area of charts when zooming in.
