@@ -38,5 +38,9 @@ qmake -o Makefile COT.pro
 make
 cp libCOT.so.0.2.0 COT.so
 
+qmake -o Makefile Ratio.pro
+make
+cp libRatio.so.0.2.0 Ratio.so
+
 rm -f lib*
 
